Tossed in a few changes that made genurl automagically populate its links better.

--- a/config.php.sample
+++ b/config.php.sample
@@ -5,7 +5,7 @@
  * You should not have to change $sExtract unless they tell you to.
  */ 
 
-$sURL = '/image.iso';
+$sURL = '/tust.iso';
 $sParam = 'token';
 $nWindow = 86400;
 $sSalt = "random_characters";
@@ -17,6 +17,7 @@ $sExtract = $_SERVER['REMOTE_ADDR'];
  * to show download. The directory set is where the hidden files are
  * proxied from. Tip: Pros put that directory outside their web root.
  */ 
+
 $sDownloadMimeType = 'application/x-iso9660-image';
 $sHiddenFilesDir = '../files';
 ?>
