added in Location: headers instead of generic 410s to redirect to impression pages.

--- a/config.php.sample
+++ b/config.php.sample
@@ -29,4 +29,5 @@ $sHiddenFilesDir = '../files';
  */
 
 $sSiteBaseURL = 'http://mydomain.com/';
+$sSiteErrorURL = 'http://mydomain.com/404.html';
 ?>
